# ruskie

./: .gitignore  .shellhook  README.md  darwin.nix  linux.nix  shell  shell.nix  xgboost.nix  xgboost.sh
db/: Cargo.toml  main
db/src/: blobs.rs  games.rs  schedule.rs  scrape.rs  sql.rs  teams.rs  test.rs
dev/: Cargo.toml  main
dev/src/: blobs.rs  games.rs  main.rs  schedule.rs  schedules.rs  sql.rs  teams.rs  test_schedules.rs  theft.rs  vars.rs  void.rs
model/: main  train.conf
model/scripts/: convert.py  enhance.py  generate.py  plot.py
scripts/: curl_example.sh  curl_teams.sh  demo.sh  list_teams.sh
sql/: demo.sql  duels.sql  names.sql  shots.sql
viz/: main  main.py  viz.py
viz/scripts/: main.py  shots.py  viz.py
