[package]
name = "ruskie"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level=3
lto=true
panic = "abort"

[dependencies]
rayon = "1.1"
reqwest = "0.9"
rusqlite = { version = "0.11", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "teams"
path = "src/teams.rs"

[[bin]]
name = "schedule"
path = "src/schedule.rs"

[[bin]]
name = "games"
path = "src/games.rs"
